# Calculator

./: README.md  mkdocs.yml  pyproject.toml  setup.py
Calculator/: main.py
calculator/: calculator.py
