[tool.poetry]
name = "calculator"
version = "0.1.0"
description = "Working on my first project"
authors = ["Renato Noronha <132279548+renatonoronha@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
blue = "^0.9.1"
isort = "^5.12.0"
mkdocs = "^1.5.2"
prospector = "1.7.7"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
